--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,intellij,java
+
+#Misc files
+/MetroParserWithJackson/
+/java_basics/
